# agency-kit

./: .env.example  CLAUDE.md  GUIDE.md  README.md  ROADMAP.md  pyproject.toml
.agency/commands/: data.md  finance.md  goal.md  healthcheck.md  marketing.md  mission.md  product.md  solve.md  tech.md
.agency/memory/: constitution.md
.agency/plans/: career-ops-borrowings.md
.agency/scripts/sh/: install-claude.sh  new-mission.sh
.agency/templates/: deliverable-template.md  dossier-template.md
agency_cli/: batch_runner.py  cli.py  exporter.py  integrations.py  runner_bridge.py  scaffolder.py  sync_payload.py  tui.py
agency_cli/engines/: cli_engine.py
agency_cli/payload/agency/commands/: comms.md  finance.md  frame.md  ops.md  people.md
agency_cli/payload/agency/memory/: constitution.md
agency_cli/payload/agency/scripts/sh/: install-claude.sh  new-mission.sh
agency_cli/payload/agents/: _shared-comms.md  _shared-people.md  _shared-tech.md  commander-agency.md  inspector-agency.md  router-agency.md  soldier-competitor-pricing.md  soldier-objection-handling.md
agency_cli/payload/skills/cross-dept-synthesis/: SKILL.md
agency_cli/payload/skills/routing/: SKILL.md
agency_cli/payload/skills/routing/agents/: openai.yaml
agency_kit/: __init__.py  commander.py  departments.py  inspector.py  mission.py  models.py  parallel.py  router.py  store.py  web.py
agents/: _shared-agency.md  _shared-data.md  _shared-eu.md  commander-agency.md  inspector-agency.md  router-agency.md
docs/: ARCHITECTURE.md
skills/cross-dept-synthesis/: SKILL.md
skills/mission-dossier/: SKILL.md
skills/routing/: SKILL.md
skills/routing/agents/: openai.yaml
tests/: conftest.py  test_cli.py  test_engine.py  test_exporter.py  test_mission_harness.py  test_structure.py
