[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agency-kit"
version = "0.1.0"
description = "agency-kit — meta-orchestrator for the AI Agency (product-kit + marketing-kit + solve-kit)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["openai-agents>=0.17.0"]

[project.optional-dependencies]
product = ["product-kit"]
marketing = ["marketing-kit"]
solve = ["solve-kit"]
all = ["product-kit", "marketing-kit", "solve-kit"]
dev = ["pytest"]
gemini = ["google-genai"]
tavily = ["tavily-python>=0.7.0"]
ddg = ["ddgs"]
litellm = ["openai-agents[litellm]"]

[project.scripts]
agency = "agency_cli.cli:main"
agency-kit-mission = "agency_kit.mission:main"

[tool.setuptools.packages.find]
include = ["agency_kit*", "agency_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
